[package]
name = "repobadger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
reqwest = "0.11.6"
serde_json = "1.0.71"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.45"